Added descriptions and data for all 4 of my released mods

--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -4,6 +4,6 @@
 <ihp version="2.0">
     <topics dir="topics"/>
     <images dir="images" web-path="zarklord.github.io"/>
-    <instance src="sporemods.tree"/>
-    <resources src="files/UPEv1.2.0"/>
+    <instance src="sporemods.tree" web-path=""/>
+    <categories src="c.list"/>
 </ihp>
