--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -3,7 +3,7 @@
 
 <ihp version="2.0">
     <topics dir="topics"/>
-    <images dir="images" web-path="zarklord.github.io"/>
+    <images dir="images" web-path="img/"/>
     <instance src="sporemods.tree" web-path=""/>
     <categories src="c.list"/>
 </ihp>
