update web path to it's final url

--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -4,6 +4,6 @@
 <ihp version="2.0">
     <topics dir="topics"/>
     <images dir="images" web-path="img/"/>
-    <instance src="sporemods.tree" web-path="spore-mods/"/>
+    <instance src="sporemods.tree" web-path="spore/"/>
     <categories src="c.list"/>
 </ihp>
